# voice-copilot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSING.md  README.md  SECURITY.md  pyproject.toml  start.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  cli-companion-interface.md  providers.md
docs/launch/: README.md  hacker-news.md  reddit-post.md  video-pitch.md  x-posts.md
docs/schemas/: cli-companion-interface.schema.json
scripts/: test_narration_prompt.py  voice-copilot.ps1  voice-copilot.sh
src/voice_copilot/: __init__.py  cli.py  hotkeys.py  tray.py
src/voice_copilot/adapters/: base.py  claude_code.py  codex.py
src/voice_copilot/audio/: hub.py  mic.py  tts_driver.py
src/voice_copilot/commentator/: __init__.py  format.py  importance.py  pipeline.py
src/voice_copilot/commentator/prompts/: __init__.py  en.cli.md  en.cli.summary.md  en.md  es.md  fr.md  ru.cli.md  ru.cli.summary.md  ru.md  ru.summary.md  uk.md
src/voice_copilot/core/: __init__.py  bus.py  config.py  events.py  secrets.py
src/voice_copilot/dialog/: manager.py
src/voice_copilot/providers/: __init__.py
src/voice_copilot/providers/llm/: __init__.py  anthropic.py  base.py  copilot_cli.py  github_copilot.py  openai.py  (+1 more)
src/voice_copilot/proxy/: anthropic.py  body_sniffer.py  cli_catalog.py  cli_catalog.yaml  cli_shims.py  ollama_native.py  openai.py  server.py  session.py
src/voice_copilot/web/: demo.py  server.py  ws.py
tests/unit/: test_bus.py  test_config.py  test_secrets.py
voice_copilot/: __init__.py  __main__.py  cli.py  hotkeys.py  tray.py
voice_copilot/adapters/: __init__.py  base.py  claude_code.py  codex.py
voice_copilot/audio/: __init__.py  hub.py  mic.py  tts_driver.py
voice_copilot/commentator/: format.py  importance.py  pipeline.py
voice_copilot/commentator/prompts/: __init__.py  en.md  es.md  fr.md  ru.md  uk.md
voice_copilot/core/: bus.py  config.py  events.py  secrets.py
voice_copilot/dialog/: __init__.py  manager.py
voice_copilot/providers/: registry.py
voice_copilot/providers/llm/: __init__.py  anthropic.py  base.py  openai.py
voice_copilot/providers/stt/: __init__.py  base.py  faster_whisper.py  whisper_api.py
voice_copilot/providers/tts/: __init__.py  base.py  edge.py  elevenlabs.py  openai.py  piper.py
voice_copilot/proxy/: __init__.py  anthropic.py  openai.py  server.py
voice_copilot/web/: __init__.py  server.py  ws.py
voice_copilot/web/static/: app.js  index.html  settings.html  settings.js  style.css
(+12 files in other folders)
